--- a/src/main.css
+++ b/src/main.css
@@ -115,6 +115,73 @@ code {
   color:gray;
   font-size: 20px;
 }
+.profile-div-header{
+  background-image: url("https://miro.medium.com/max/1124/1*92adf06PCF91kCYu1nPLQg.jpeg");
+  width: 100%;
+  height: 200px;
+}
+.main-chat-div{
+  height: 300px;
+  background-color: rgb(151, 195, 222);
+  transition: 1s;
+}
+.username-chatroom-header{
+  color:white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+}
+.main-header-chat-div{
+  height: 50px;
+  background-color: #0070B7;
+}
+.exit-button-chatroom{
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
+  text-align: center;
+}
+.picture-for-chatroom{
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+}
+.div-to-structure-chatroom{
+  display: flex;
+}
+.input-chatroom{
+  width: 260px;
+  height: 50px;
+  z-index: 10;
+}
+.btn-chatroom{
+  width:100%;
+  height: 50px;
+  background-color: #0070B7;
+  color:white;
+}
+.exit-btn-chatroom{
+  color: #0070B7;
+  font-size: 30px;
+}
+.main-div-chat-room{
+  width: 300px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+}
+.user-info-current-profile-header-img{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid white;
+  position: relative;
+  top: -100px;
+  left: 50px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 .nav-item-div{
   width: 65px;
   color: white;
