--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ code {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .comment-image {
   width: 40px;
@@ -189,10 +190,10 @@ code {
 
 .share-box_trigger {
   width:100%;
-border-right: 2px solid rgba(0, 0, 0, 0.15) !important;
+border-right: 1px solid rgba(0, 0, 0, 0.15) !important;
 background-color: rgb(245, 245, 245) !important;
 cursor: pointer !important;
-padding: 40px !important;
+padding: 20px !important;
 color: black !important;
 }
 .post-bottom-icon-heart{
