--- a/src/main.css
+++ b/src/main.css
@@ -90,7 +90,7 @@ code {
   margin-top: 8px;
 }
 .modal-div{
-  height: 850px;
+  min-height: 100%;
 }
 .input-group-text{
   background-color: #E0E9EF !important;
@@ -124,6 +124,31 @@ code {
   height: 300px;
   background-color: rgb(151, 195, 222);
   transition: 1s;
+  overflow-y: scroll;
+}
+.msg-receiver{
+  align-self: start;
+  margin: 15px 0px 10px 0px;
+  padding: 5px;
+  font-family: 'Roboto', sans-serif;
+  background-color: rgb(198, 230, 255);
+  border-radius: 5px 5px 0 0;
+  min-height: 30px;
+  margin-right: 70px;
+}
+.msg-author{
+  /* align-self: end; */
+  margin: 15px;
+  padding: 5px;
+  font-family: 'Roboto', sans-serif;
+  background-color: white;
+  border-radius: 5px 5px 0 0;
+  min-height: 30px;
+  margin-left: 30px;
+}
+.chat-moment{
+  font-family: 'Roboto', sans-serif;
+  font-size: 10px;
 }
 .username-chatroom-header{
   color:white;
@@ -236,6 +261,7 @@ code {
   border-radius: 0px !important;
   border: 0px solid white !important;
   height: 29px !important;
+  background:#E9ECF0; 
 }
 .linkedin-icon{
   margin-left: 50px;
@@ -428,4 +454,45 @@ code {
 #deleteexperience {
   margin-left: 2%!important;
   background-color: rgb(44, 121, 145);
+}
+
+.users-img-list{
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 50%
+}
+
+.users-list-div{
+  height: 90px;
+  color: black
+}
+
+.user-img-style-exp {
+  width: 60px;
+  height: 60px;
+  object-fit: cover
+}
+
+.date-area-style {
+  font-size: 15px;
+  color: gray
+}
+
+.btn-exp-modal-delete {
+  width: 40%;
+  color: white;
+  display: inline-block !important;
+  margin: 10px 0px;
+  align-self: center;
+}
+
+.modal-content-exp{
+  text-align: center;
+}
+
+.headerStyle {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 0px
 }
